<resources>
    <string name="app_name">Mental Counting</string>
    <string name="play">Play</string>
    <string name="bad_answer">Bad answer</string>
    <string name="good_answer">Good answer</string>
    <string name="calculate">Calculate: %s</string>
    <string name="validat">Validat</string>
    <string name="BackHome">Back home</string>
    <string name="score">Score</string>
    <string name="clear_scores">Clear scores</string>
    <string name="operations_number">Number of operation: %d</string>
    <string name="last_operation">Last operation: %s</string>
    <string name="success_percentage">Success percentage: %s</string>
    <string name="clear_scores_dialog">Are you sure you want to clear your score?</string>
    <string name="scores_cleared">Scores cleared successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="empty_answer">Empty answer</string>
    <string name="non_number_answer">Please give only numbers</string>
    <string name="timer" translatable="false">%1$d:%2$d</string>
    <string name="game_result">You solved %1$d operation in %2$d minutes and %3$d seconds with %4$d tries.</string>
    <string name="number_operations">Number of operations</string>
    <string name="number_tries">Number of tries</string>
    <string name="time">Time</string>
    <string name="description">How fast can you solve 10 operations?</string>
</resources>