<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visuel.ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:layout_margin="20dp"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/game_result"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nb_operations_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operations_number" />

            <TextView
                android:id="@+id/last_operation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_operation" />

            <TextView
                android:id="@+id/success_percentage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success_percentage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scores_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/id_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:gravity="center"
                android:text="#"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:gravity="center"
                android:text="@string/number_operations"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:gravity="center"
                android:text="@string/number_tries"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:gravity="center"
                android:text="@string/time"
                />
        </LinearLayout>
        <ListView
            android:id="@+id/score_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp" />


        <Button
            android:id="@+id/back_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/back" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>