<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jeu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/operation_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/good_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_answer"
            android:textColor="@android:color/holo_green_light" />

        <TextView
            android:id="@+id/bad_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad_answer"
            android:textColor="@android:color/holo_red_light" />

        <EditText
            android:id="@+id/operation_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true" />

        <Button
            android:id="@+id/validate_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valider" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>